--- a/PBL4_DotNet/PBL4_DotNet.csproj
+++ b/PBL4_DotNet/PBL4_DotNet.csproj
@@ -67,8 +67,86 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Information.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Information.Designer.cs">
+      <DependentUpon>Information.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LanScan.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="LanScan.Designer.cs">
+      <DependentUpon>LanScan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MainMenu.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="MainMenu.Designer.cs">
+      <DependentUpon>MainMenu.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tools.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools.Designer.cs">
+      <DependentUpon>Tools.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools_DNS.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools_DNS.Designer.cs">
+      <DependentUpon>Tools_DNS.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools_Menu.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools_Menu.Designer.cs">
+      <DependentUpon>Tools_Menu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools_Ping.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools_Ping.Designer.cs">
+      <DependentUpon>Tools_Ping.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools_Ports.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools_Ports.Designer.cs">
+      <DependentUpon>Tools_Ports.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools_Route.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools_Route.Designer.cs">
+      <DependentUpon>Tools_Route.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Tools_Whois.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Tools_Whois.Designer.cs">
+      <DependentUpon>Tools_Whois.cs</DependentUpon>
+    </Compile>
+    <Compile Include="WifiSignal.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="WifiSignal.Designer.cs">
+      <DependentUpon>WifiSignal.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Information.resx">
+      <DependentUpon>Information.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LanScan.resx">
+      <DependentUpon>LanScan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainMenu.resx">
+      <DependentUpon>MainMenu.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -78,6 +156,30 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Tools.resx">
+      <DependentUpon>Tools.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools_DNS.resx">
+      <DependentUpon>Tools_DNS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools_Menu.resx">
+      <DependentUpon>Tools_Menu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools_Ping.resx">
+      <DependentUpon>Tools_Ping.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools_Ports.resx">
+      <DependentUpon>Tools_Ports.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools_Route.resx">
+      <DependentUpon>Tools_Route.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Tools_Whois.resx">
+      <DependentUpon>Tools_Whois.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WifiSignal.resx">
+      <DependentUpon>WifiSignal.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
