Apply some change to LanScan and Port function

--- a/PBL4_DotNet/PBL4_DotNet.csproj
+++ b/PBL4_DotNet/PBL4_DotNet.csproj
@@ -12,6 +12,7 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,8 +25,8 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
+    <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -46,6 +47,18 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestCertificateThumbprint>6E075B74AE1757E7E660F173FD14A2950CFD0167</ManifestCertificateThumbprint>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ManifestKeyFile>PBL4_DotNet_TemporaryKey.pfx</ManifestKeyFile>
+  </PropertyGroup>
+  <PropertyGroup>
+    <GenerateManifests>true</GenerateManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -135,6 +148,12 @@
     <Compile Include="WifiSignal.Designer.cs">
       <DependentUpon>WifiSignal.cs</DependentUpon>
     </Compile>
+    <Compile Include="WifiSignal_ViewResult.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="WifiSignal_ViewResult.Designer.cs">
+      <DependentUpon>WifiSignal_ViewResult.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -179,6 +198,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="WifiSignal.resx">
       <DependentUpon>WifiSignal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WifiSignal_ViewResult.resx">
+      <DependentUpon>WifiSignal_ViewResult.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
